--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
       "project": "./tsconfig.json"
     },
     "rules": {
+      "@typescript-eslint/ban-ts-comment": "off",
       "eslint-comments/no-use": "off",
       "import/no-namespace": "off",
       "no-unused-vars": "off",
@@ -16,7 +17,6 @@
       "@typescript-eslint/no-require-imports": "error",
       "@typescript-eslint/array-type": "error",
       "@typescript-eslint/await-thenable": "error",
-      "@typescript-eslint/ban-ts-comment": "error",
       "camelcase": "off",
       "@typescript-eslint/consistent-type-assertions": "error",
       "@typescript-eslint/explicit-function-return-type": ["error", {"allowExpressions": true}],
